Fix layout on IE10.

--- a/trackers/static/event.css
+++ b/trackers/static/event.css
@@ -9,8 +9,8 @@ html, body {
 }
 
 #foo{
-    display: flex;
-    flex-direction: column;
+    display: -ms-flexbox; display: flex;
+    -ms-flex-direction: column; flex-direction: column;
     min-height: 100%;
     height: 100%;
     width: 100%;
@@ -20,16 +20,19 @@ html, body {
     padding: 8px;
     background: #4285F4;
     color: white;
-    display: flex;
-    flex-wrap: wrap;
+    display: -ms-flexbox; display: flex;
+    -ms-flex-wrap: wrap; flex-wrap: wrap;
+    -ms-flex: 1 0 auto;
     justify-content: space-between;
 }
 
+#status, #title_contain {
+    -ms-flex: 1 0 auto;
+}
+
 #main {
-    flex-grow: 2;
-    flex-basis: 100%;
+    -ms-flex: 2 0 100%; flex: 2 0 100%;
     position: relative;
-    min-height: 200px;
 }
 
 #title{
